@@ -2,8 +2,8 @@
 <project version="4">
   <component name="ProjectModuleManager">
     <modules>
-      <module fileurl="file://$PROJECT_DIR$/KeePassDroid.iml" filepath="$PROJECT_DIR$/KeePassDroid.iml" />
-      <module fileurl="file://$PROJECT_DIR$/app/app.iml" filepath="$PROJECT_DIR$/app/app.iml" />
+      <module fileurl="file://$PROJECT_DIR$/KeePassDroid.iml" filepath="$PROJECT_DIR$/KeePassDroid.iml" group="KeePassDroid" />
+      <module fileurl="file://$PROJECT_DIR$/app/app.iml" filepath="$PROJECT_DIR$/app/app.iml" group="KeePassDroid/app" />
     </modules>
   </component>
 </project>
