@@ -9,8 +9,8 @@ android {
         minSdkVersion 14
         targetSdkVersion 28
 
-        versionCode = 193
-        versionName = "2.5.10"
+        versionCode = 194
+        versionName = "2.5.11"
 
         testApplicationId = "com.keepassdroid.tests"
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
@@ -59,7 +59,7 @@ dependencies {
     implementation 'androidx.core:core:1.2.0'
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation "androidx.biometric:biometric:1.0.1"
-    implementation "androidx.preference:preference:1.1.0"
+    implementation "androidx.preference:preference:1.1.1"
     implementation "com.google.android.material:material:1.1.0"
 
     androidTestImplementation'junit:junit:4.12'
