@@ -1,3 +1,6 @@
+KeePassDroid (2.5.11)
+ * Fix crash on invalid length databases
+
 KeePassDroid (2.5.10)
  * Fix crash on database create
 
